--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "kiss-flatpak"]
 	path = kiss-flatpak
 	url = https://github.com/dylanaraps/kiss-flatpak
+[submodule "wyverkiss"]
+	path = wyverkiss
+	url = https://github.com/wyvertux/wyverkiss
